浏览器缓存

--- a/相关知识/浏览器.md
+++ b/相关知识/浏览器.md
@@ -2,9 +2,9 @@ https://juejin.cn/post/6844904021308735502
 
 # 浏览器缓存
 
-## 强缓存
+浏览器中的缓存作用分为两种情况，一种是需要发送HTTP请求，一种是不需要发送
 
-浏览器中的缓存作用分为两种情况，一种是需要发送`HTTP`请求，一种是不需要发送
+## 强缓存
 
 * 首先会检查强缓存(这个阶段不用发送http请求)
 
@@ -12,13 +12,77 @@ https://juejin.cn/post/6844904021308735502
 
 ### Expires
 
-存在于服务端返回的响应头中，告诉浏览器在这个过期时间之前可以直接从缓存里面获取数据，无需再次请求
+过期时间。存在于服务端返回的响应头中，告诉浏览器在这个过期时间之前可以直接从缓存里面获取数据，无需再次请求
+
+- 潜藏了一个坑，那就是**服务器的时间和浏览器的时间可能并不一致**。因此这种方式很快在后来的HTTP1.1版本中被抛弃了。
 
 ### Cache-Control
 
+它和Expires本质的不同在于它并没有采用**具体的过期时间点**这个方式，而是采用过期时长来控制缓存 ---- max-age
+
+还有许多其他属性：public、private（只有浏览器能缓存，中间的代理服务器不能缓存）、no-cache（跳过当前的强缓存，发送HTTP请求。即直接进入协商缓存阶段）、no-store（不进行任何形式的缓存）......
+
+
+
 ## 协商缓存
 
+协商缓存：强缓存失效之后，浏览器在请求头中携带相应的**缓存tag**来向服务器发请求，由服务器根据这个tag，来决定是否使用缓存。
+
+### Last-Modified
+
+最后修改时间，在浏览器第一次给服务器发送请求后，服务器会在响应头中加上这个字段。浏览器接收到后，如果再次请求，会在请求头中携带If-Modified-Since字段，这个字段的值也就是服务器传来的最后修改时间。会和这个服务器中该资源的最后修改时间对比
+
+- 如果请求头中的这个值小于最后修改时间，说明是时候更新了。返回新的资源，跟常规的HTTP请求响应的流程一样。
+- 否则返回304，告诉浏览器直接用缓存
+
+### ETag
+
+服务器根据当前文件的内容，给文件生成的唯一标识，由文件内容+文件最后修改时间共同决定的。服务器通过响应头把这个值给浏览器。
+
+### 两者对比
+
+- 精准度上，ETag优于Last-Modified。
+  -  ETag 是按照内容给资源上标识，因此能准确感知资源的变化。而 Last-Modified 就不一样了，它在一些特殊的情况并不能准确感知资源变化，主要有两种情况
+- 性能上，Last-Modified优于ETag。Last-Modified仅仅只是记录一个时间点，而 Etag需要根据文件的具体内容生成哈希值
+
+
+
 ## 缓存位置
+
+当强缓存命中或者协商缓存中服务器返回304的时候，我们直接从缓存中获取资源。那这些资源究竟缓存在什么位置呢？
+
+优先级从高到低：Service Worker、Memory Cache、Disk Cache、Push Cache
+
+### Service Worker
+
+让 JS 运行在主线程之外，由于它脱离了浏览器的窗体，因此无法直接访问DOM。（借鉴了 Web Worker的思路）
+
+- 离线缓存
+
+
+
+### Memory Cache 和 Disk Cache
+
+内存缓存：从效率上它是最快的。但是从存活时间来讲又是最短的。当渲染进程结束后，内存缓存也就不存在了。
+
+磁盘缓存：优势在于存储容量和存储时长。
+
+### Push Cache
+
+推送缓存，这是浏览器缓存的最后一道防线。`HTTP/2` 中的内容
+
+
+
+## 总结
+
+先通过 Cache-Control 验证强缓存是否可用
+
+- 如果强缓存可用，直接使用
+- 否则进入协商缓存，即发送 HTTP 请求，服务器通过请求头中的If-Modified-Since或者If-None-Match字段检查资源是否更新
+  - 若资源更新，返回资源和200状态码
+  - 否则，返回304，告诉浏览器直接从缓存获取资源
+
+
 
 
 
