--- a/TS/Vue/项目配置.md
+++ b/TS/Vue/项目配置.md
@@ -285,6 +285,52 @@ export function getAssetUrl(image: string): string {
 
 
 
+#### 图片懒加载
+
+https://developer.mozilla.org/zh-CN/docs/Web/API/Intersection_Observer_API
+
+自定义指令
+
+```vue
+<script setup lang="ts">
+import noImg from '@/assets/no-img.png'
+  
+let oberver: null | IntersectionObserver = null
+const vMylazy = {
+  mounted(el: HTMLImageElement, bindings: any) {
+    oberver = new IntersectionObserver(([{ isIntersecting }]) => {  // entries
+      // true；进入可视区域，false：未进入可视区域
+      if (isIntersecting) {
+        // 1、给图片的src属性赋值图片的地址
+        el.src = bindings.value
+        // 2、取消图片的监听，默认是会一直监听的，如果不取消。就会一直执行
+        oberver!.unobserve(el)
+        oberver = null
+        // 3、加载的图片失败了，显示默认的图片地址
+        // el.onerror = () => {
+        //   el.src = noImg
+        // }
+      }
+    })
+    // 监听dom元素
+    oberver.observe(el)
+  },
+  beforeUnmount(el: HTMLImageElement) {
+    oberver!.unobserve(el)
+    oberver = null
+  }
+}
+</script>
+
+<template>
+	<img v-mylazy="url" />
+</template>
+```
+
+
+
+
+
 #### Van-tabbar切换问题
 
 解决刷新后(or手动输入不同页面的url)页面和url不匹配
